[gd_scene load_steps=8 format=3 uid="uid://trbupub18prg"]

[ext_resource type="Script" path="res://game/src/unit/player/player_camera.gd" id="1_86jyl"]
[ext_resource type="Texture2D" uid="uid://v24sbfg22svg" path="res://prototypes/assets/common/kenney_ui-pack-rpg-expansion/PNG/buttonLong_brown_pressed.png" id="2_g6a23"]
[ext_resource type="Texture2D" uid="uid://ddsk6d725dgkm" path="res://prototypes/assets/common/kenney_input-prompts-pixel-16/Tiles/tile_0076.png" id="2_lc464"]
[ext_resource type="Texture2D" uid="uid://cs2376lgxtou" path="res://prototypes/assets/common/kenney_ui-pack-rpg-expansion/PNG/barRed_verticalMid.png" id="3_st5bj"]
[ext_resource type="Texture2D" uid="uid://d3bvhomqyrxjd" path="res://prototypes/assets/common/kenney_ui-pack-rpg-expansion/PNG/barBlue_verticalMid.png" id="4_7w6cj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fkccy"]
texture = ExtResource("3_st5bj")
modulate_color = Color(1, 0.395734, 0.423641, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48ffb"]
texture = ExtResource("4_7w6cj")

[node name="Camera" type="Camera2D"]
zoom = Vector2(2.5, 2.5)
script = ExtResource("1_86jyl")

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 920.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ComboGrid" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = 176.0
offset_right = 28.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(28, 8)
columns = 3

[node name="One" type="TextureRect" parent="Control/ComboGrid"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_lc464")

[node name="Two" type="TextureRect" parent="Control/ComboGrid"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_lc464")

[node name="Three" type="TextureRect" parent="Control/ComboGrid"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_lc464")

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
layout_mode = 2
offset_left = -330.139
offset_top = -204.948
offset_right = -140.139
offset_bottom = -159.948
rotation = 1.57207
scale = Vector2(0.903171, 0.903171)
texture = ExtResource("2_g6a23")

[node name="ResourceGrid" type="GridContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -362.139
offset_top = -199.948
offset_right = -350.139
offset_bottom = -195.948
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 40)
columns = 2

[node name="HP" type="ProgressBar" parent="Control/ResourceGrid"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_fkccy")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="MP" type="ProgressBar" parent="Control/ResourceGrid"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxTexture_48ffb")
value = 100.0
fill_mode = 3
show_percentage = false
